Change task 1 notebook names to task1_

--- a/notebooks/task1_forbes.ipynb
+++ b/notebooks/task1_forbes.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Webscrape Forbes business data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -439,6 +446,7 @@
     "import time\n",
     "import requests\n",
     "import json\n",
+    "from typing import Dict\n",
     "\n",
     "chrome_options = Options()\n",
     "chrome_options.add_argument(\"--headless\") \n",
@@ -457,7 +465,21 @@
     "SCROLL_PAUSE_TIME = 2\n",
     "articles_info = []\n",
     "\n",
-    "def scrape_article(url):\n",
+    "def scrape_article(url: str) -> Dict:\n",
+    "    \"\"\"\n",
+    "    Scrapes article information from a given URL.\n",
+    "\n",
+    "    Args:\n",
+    "    - url (str): The URL of the article to scrape.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Dict: A dictionary containing the following keys:\n",
+    "        - 'url': The input URL.\n",
+    "        - 'title': The title of the article, or 'N/A' if not found.\n",
+    "        - 'date': The date of the article, or 'N/A' if not found.\n",
+    "        - 'author': The author of the article, or 'N/A' if not found.\n",
+    "        - 'content': The content of the article, or 'N/A' if not found.\n",
+    "    \"\"\"\n",
     "    article_data = {'url': url}\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
@@ -489,6 +511,7 @@
     "        \n",
     "    return article_data\n",
     "\n",
+    "# Scroll and scrape until 200 articles are collected\n",
     "while len(articles_info) < 200:\n",
     "    driver.find_element(By.TAG_NAME, 'body').send_keys(Keys.END)\n",
     "    \n",
@@ -506,6 +529,7 @@
     "        if len(articles_info) >= 200:\n",
     "            break\n",
     "        article_info = scrape_article(url)\n",
+    "        # only append if all info is available for the article\n",
     "        if article_info['title'] != 'N/A' and article_info['date'] != 'N/A' and article_info['author'] != 'N/A' and article_info['content'] != 'N/A':\n",
     "            articles_info.append(article_info)\n",
     "        print(f\"Scraped article: {article_info['title']}\")\n",
