Change file path for task 1

--- a/notebooks/task1_forbes.ipynb
+++ b/notebooks/task1_forbes.ipynb
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = '../data/json/forbes.json'\n",
+    "output_file = '../data/task1_json/forbes.json'\n",
     "\n",
     "with open(output_file, 'w', encoding='utf-8') as f:\n",
     "    json.dump(articles_info, f, ensure_ascii=False, indent=4)"
