--- a/notebooks/task1_reuters.ipynb
+++ b/notebooks/task1_reuters.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "print(\"Total business articles collected:\", len(articles))\n",
     "\n",
-    "output_file = '../data/json/reuters.json'\n",
+    "output_file = '../data/task1_json/reuters.json'\n",
     "with open(output_file, 'w', encoding='utf-8') as f:\n",
     "    json.dump(articles, f, ensure_ascii=False, indent=4)\n",
     "\n",
