Implement task 2 with entity extraction and risk rating

--- a/notebooks/task2_prompt.ipynb
+++ b/notebooks/task2_prompt.ipynb
@@ -63,7 +63,7 @@
     "import json\n",
     "from langchain_openai import AzureChatOpenAI, AzureOpenAIEmbeddings\n",
     "\n",
-    "with open(\"secrets/openai_secrets.json\", \"r\") as file:\n",
+    "with open(\"../secrets/openai_secrets.json\", \"r\") as file:\n",
     "  openai_secrets = json.load(file)\n",
     "\n",
     "\n",
@@ -454,10 +454,10 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"data/task1_json/forbes.json\", \"r\") as file:\n",
+    "with open(\"../data/task1_json/forbes.json\", \"r\") as file:\n",
     "  forbes_articles = json.load(file)\n",
     "\n",
-    "with open(\"data/task1_json/reuters.json\", \"r\") as file:\n",
+    "with open(\"../data/task1_json/reuters.json\", \"r\") as file:\n",
     "  reuters_articles = json.load(file)"
    ]
   },
@@ -824,7 +824,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('data/task2/articles_with_rating.json', 'w', encoding='utf-8') as f:\n",
+    "with open('../data/task2_json/articles_with_rating.json', 'w', encoding='utf-8') as f:\n",
     "  json.dump(articles_with_rating, f, indent=4)"
    ]
   }
