Implement task 3 with RAG

--- a/notebooks/task3_RAG.ipynb
+++ b/notebooks/task3_RAG.ipynb
@@ -67,7 +67,7 @@
     "import json\n",
     "from langchain_openai import AzureChatOpenAI, AzureOpenAIEmbeddings\n",
     "\n",
-    "with open(\"secrets/openai_secrets.json\", \"r\") as file:\n",
+    "with open(\"../secrets/openai_secrets.json\", \"r\") as file:\n",
     "  openai_secrets = json.load(file)\n",
     "\n",
     "\n",
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_path = 'data/task2_json/articles_with_rating.json'"
+    "input_file_path = '../data/task2_json/articles_with_rating.json'"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('data/task3_json/company_with_rating.json', 'w', encoding='utf-8') as f:\n",
+    "with open('../data/task3_json/company_with_rating.json', 'w', encoding='utf-8') as f:\n",
     "  json.dump(company_with_rating, f, indent=4)"
    ]
   },
